# nix-devops-cheatsheet

./: .envrc  .gitignore  .gitmodules  LICENSE  flake.nix  repl.nix  treefmt.toml
.github/workflows/: devshell.yaml  nix.yaml
devshell/: .envrc  flake.nix
devshell/modules/: back-compat.nix  commands.nix  default.nix  devshell.nix  env.nix  modules-docs.nix  modules.nix
devshell/shell/: default.nix  test.toml
emacs/: auxilary.nix  flake.nix  packages.nix
go/: flake.nix
gomod2nix/: default.nix  flake.nix  gomod2nix.toml
guix/: flake.nix
haskell/: flake.nix
nix-script/: ci.sh  flake.nix  shell.nix
nix-script/.nix-script-cache/: exp-with-dependencies.hs-f329633b4b3555bc7e75979b50763df4854ff4209f6d946ac8fe5de9c20b6da4
nix-script/scripts/: exp-with-dependencies.hs
python/: Justfile  flake.nix  mkShell.nix
python/nixpkgs/: overlays.nix  py7zr.nix  sources.toml
python/node-packages/: default.nix  node-env.nix  node-packages.nix  packages.json
python/poetry/: default.nix  overrides-preferWheels.nix  pyproject.toml
python/pythonDev-node-packages/: node-packages.nix  packages.json
rust/: flake.nix
rust/devshell/: commands.toml  default.nix  rust.nix
rust/nix/: commands.toml  rust.nix
std/: .envrc  .gitignore  .pre-commit-config.yaml  flake.nix
std-flakeParts/: .envrc  .gitignore  flake.nix
std-flakeParts-devenv/: .gitignore  .lintstagedrc.yaml  flake.nix
std-flakeParts-devenv/devenvModules/: rust.nix
std-flakeParts-devenv/lock/: flake.nix
std-flakeParts/lock/: flake.nix
std/devenvModules/: default.nix  lint.nix
yants/: flake.nix
(+21 files in other folders)
