[tool.poetry]
name = "python-csutom"
version = "0.1.0"
description = ""
authors = ["guangtao <gtrunsec@hardenedlinux.org>"]
readme = "README.md"
packages = [{ include = "python_csutom" }]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
